# PluginLab

./: .gitignore  .gitmodules  README.md  WORKFLOW.md  install-juce-deps-debian.sh
agents/: cross-platform-release-engineer.md
agents/hermes-agents/: README.md  bishop-qa.md  build-doctor.md  cross-platform-release-engineer.md  dsp-engineer.md  juce-architect.md  king-coordinator.md  product-strategist.md  ui-ux-designer.md
knowledge-base/cross-platform/: README.md
products/ProClipper/: CMakeLists.txt  STATUS.md
products/ProClipper/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
products/ProCompressor/: CMakeLists.txt  PRODUCT_BRIEF.md  STATUS.md  ui-preview.html
products/ProCompressor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
products/ProGainUtility/: CMakeLists.txt  PRODUCT_BRIEF.md
products/ProGainUtility/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build-mac-plugin.sh  push-work.sh  run-plugin-agent.sh
templates/: PRODUCT_STATUS_TEMPLATE.md
templates/juce-plugin-template/: CMakeLists.txt  QA_CHECKLIST.md  README.md
templates/juce-plugin-template/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
